--- a/Scrabble2018/View/DesktopWindow.xaml
+++ b/Scrabble2018/View/DesktopWindow.xaml
@@ -1,35 +1,55 @@
-﻿<Window x:Class="Scrabble2018.DesktopWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d"
-        xmlns:view="clr-namespace:Scrabble2018.View"
-        xmlns:model="clr-namespace:DawgResolver.Model;assembly=DawgResolver"
-        Title="Scrabble" Height="720" Width="1280"
-        Background="AntiqueWhite" 
-        ResizeMode="CanMinimize" DataContext="{Binding RelativeSource={RelativeSource Self}}"
-        >
-
+﻿<Window
+    x:Class="Scrabble2018.DesktopWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:conv="clr-namespace:Scrabble2018.Converters"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:drModel="clr-namespace:DawgResolver.Model;assembly=DawgResolver"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:model="clr-namespace:Scrabble2018.Model"
+    Title="Scrabble"
+    Width="1280"
+    Height="720"
+    Background="AntiqueWhite"
+    DataContext="{Binding RelativeSource={RelativeSource Self}}"
+    ResizeMode="CanMinimize"
+    mc:Ignorable="d">
+    <Window.Resources>
+        <drModel:Game x:Key="drgame" />
+        <conv:CharToLetterConverter x:Key="ctlConv" />
+    </Window.Resources>
     <Grid>
-        <ItemsControl x:Name="myMatrix" ItemsSource="{Binding BoardTiles,UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" Height="675" VerticalAlignment="Top" Width="671" Margin="0,6,0,0">
+        <ItemsControl
+            x:Name="myMatrix"
+            Width="671"
+            Height="675"
+            Margin="0,6,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            ItemsSource="{Binding BoardTiles, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
+            KeyDown="myMatrix_KeyDown">
             <ItemsControl.ItemsPanel>
-                <!-- specify the panel that is the container for the items -->
+                <!--  specify the panel that is the container for the items  -->
                 <ItemsPanelTemplate>
-                    <UniformGrid x:Name="BoardGrid" Rows="15" Columns="15" >
+                    <UniformGrid
+                        x:Name="BoardGrid"
+                        HorizontalAlignment="Stretch"
+                        VerticalAlignment="Stretch"
+                        Columns="15"
+                        Rows="15">
                         <UniformGrid.Resources>
-                            <Style TargetType="{x:Type Button}">
-                                <Setter Property="Margin" Value="2"/>
-                                <Setter Property="FontSize" Value="33"/>
+                            <Style TargetType="{x:Type model:TextBoxTile}">
+                                <Setter Property="Margin" Value="2" />
+                                <Setter Property="FontSize" Value="33" />
                             </Style>
                         </UniformGrid.Resources>
                     </UniformGrid>
                 </ItemsPanelTemplate>
             </ItemsControl.ItemsPanel>
-            <!-- specify the template used to render each item -->
+            <!--  specify the template used to render each item  -->
             <ItemsControl.ItemTemplate>
-                <DataTemplate DataType="{x:Type model:Tile}">
-                    <TextBox Text="{Binding Letter.Char, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}"/>
+                <DataTemplate DataType="{x:Type model:TextBoxTile}">
+                    <TextBox Text="{Binding Path=Letter, Converter={StaticResource ctlConv}, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" />
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
         </ItemsControl>
@@ -44,41 +64,173 @@
 
 
 
-        <Grid HorizontalAlignment="Left" Height="490" Margin="671,3,0,0" VerticalAlignment="Top" Width="601">
+        <Grid
+            Width="601"
+            Height="490"
+            Margin="671,3,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition></ColumnDefinition>
-                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition />
+                <ColumnDefinition />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition></RowDefinition>
-                <RowDefinition></RowDefinition>
+                <RowDefinition />
+                <RowDefinition />
             </Grid.RowDefinitions>
-            <TextBox Name="LogBoard" FontSize="15" Text="" ScrollViewer.VerticalScrollBarVisibility="Auto" IsReadOnly="True" HorizontalAlignment="Left" Height="200" Margin="6,10,0,0" VerticalAlignment="Top" Width="581"/>
-            <TextBox x:Name="txtBagContent"  Grid.Column="1" ScrollViewer.VerticalScrollBarVisibility="Auto" HorizontalAlignment="Stretch" Height="200" Margin="6,10,0,0" VerticalAlignment="Top" Width="auto"></TextBox>
-            <ListBox x:Name="lstHint" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Stretch" Height="200" SelectionChanged="lstHint_SelectionChanged"></ListBox>
+            <TextBox
+                Name="LogBoard"
+                Width="581"
+                Height="200"
+                Margin="6,10,0,0"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                FontSize="15"
+                IsReadOnly="True"
+                ScrollViewer.VerticalScrollBarVisibility="Auto"
+                Text="" />
+            <TextBox
+                x:Name="txtBagContent"
+                Grid.Column="1"
+                Width="auto"
+                Height="200"
+                Margin="6,10,0,0"
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Top"
+                ScrollViewer.VerticalScrollBarVisibility="Auto" />
+            <ListBox
+                x:Name="lstHint"
+                Grid.Row="1"
+                Grid.Column="0"
+                Height="200"
+                HorizontalAlignment="Stretch"
+                SelectionChanged="lstHint_SelectionChanged" />
         </Grid>
-        <Grid Height="191" Margin="671,498,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="593">
-            <Grid HorizontalAlignment="Left" Margin="0,0,0,3" Width="428">
-                <Label x:Name="PlayerInfoLbl" Content="This is your rack." HorizontalAlignment="Left" Margin="10,18,0,0" VerticalAlignment="Top" Height="32" Width="207" FontSize="20" FontFamily="Microsoft YaHei Mono"/>
-                <UniformGrid x:Name="HandGrid" Columns="7" Rows="1" Margin="10,0,0,40.4" Height="70" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="408">
+        <Grid
+            Width="593"
+            Height="191"
+            Margin="671,498,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top">
+            <Grid
+                Width="428"
+                Margin="0,0,0,3"
+                HorizontalAlignment="Left">
+                <Label
+                    x:Name="PlayerInfoLbl"
+                    Width="207"
+                    Height="32"
+                    Margin="10,18,0,0"
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Top"
+                    Content="This is your rack."
+                    FontFamily="Microsoft YaHei Mono"
+                    FontSize="20" />
+                <UniformGrid
+                    x:Name="HandGrid"
+                    Width="408"
+                    Height="70"
+                    Margin="10,0,0,40.4"
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Bottom"
+                    Columns="7"
+                    Rows="1">
                     <UniformGrid.Resources>
                         <Style TargetType="{x:Type TextBox}">
-                            <Setter Property="Margin" Value="2"/>
-                            <Setter Property="FontSize" Value="33"/>
+                            <Setter Property="Margin" Value="2" />
+                            <Setter Property="FontSize" Value="33" />
                         </Style>
                     </UniformGrid.Resources>
                 </UniformGrid>
-                <Label x:Name="StorageLbl" Content="" HorizontalAlignment="Left" Margin="298,50,0,0" VerticalAlignment="Top" Visibility="Hidden"/>
+                <Label
+                    x:Name="StorageLbl"
+                    Margin="298,50,0,0"
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Top"
+                    Content=""
+                    Visibility="Hidden" />
             </Grid>
-            <Grid HorizontalAlignment="Right" Margin="0,0,0,3" Width="160" Name="Panel">
+            <Grid
+                Name="Panel"
+                Width="160"
+                Margin="0,0,0,3"
+                HorizontalAlignment="Right">
                 <!--<Button x:Name="StartButton"  Visibility="Hidden" FontSize="35"  Background="Gold" IsEnabled="True" Content="START" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="142" Height="137" Click="StartButton_Click"/>-->
-                <Button x:Name="ValidateButton"  FontSize="15" Background="Green" Foreground="White" IsEnabled="True" Content="FINISH TURN" HorizontalAlignment="Left" Margin="10,5,0,0" VerticalAlignment="Top" Width="142" Height="50" Click="ValidateButton_Click"/>
-                <Button x:Name="PassButton" FontSize="15" Background="DodgerBlue" Foreground="White" IsEnabled="True" Content="PASS" HorizontalAlignment="Left" Margin="90,117,0,0" VerticalAlignment="Top" Width="62" Height="50" Click="PassButton_Click"/>
-                <Button x:Name="SwapButton" FontSize="15" Background="Tomato" Foreground="White" IsEnabled="True" Content="SWAP" HorizontalAlignment="Left" Margin="10,117,0,0" VerticalAlignment="Top" Width="60" Height="50" Click="SwapButton_Click"/>
-                <Button x:Name="ReloadButton" FontSize="15" Background="PaleVioletRed" Foreground="White" IsEnabled="True" Content="RETURN" HorizontalAlignment="Left" Margin="10,60,0,0" VerticalAlignment="Top" Width="71" Height="50" Click="ReloadButton_Click"/>
-                <Button x:Name="HintButton" FontSize="15" Background="OrangeRed" Foreground="White" IsEnabled="True" Content="HINT" HorizontalAlignment="Right" Margin="10,60,0,0" VerticalAlignment="Top" Width="71" Height="50" Click="HintButton_Click"/>
+                <Button
+                    x:Name="ValidateButton"
+                    Width="142"
+                    Height="50"
+                    Margin="10,5,0,0"
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Top"
+                    Background="Green"
+                    Click="ValidateButton_Click"
+                    Content="FINISH TURN"
+                    FontSize="15"
+                    Foreground="White"
+                    IsEnabled="True" />
+                <Button
+                    x:Name="PassButton"
+                    Width="62"
+                    Height="50"
+                    Margin="90,117,0,0"
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Top"
+                    Background="DodgerBlue"
+                    Click="PassButton_Click"
+                    Content="PASS"
+                    FontSize="15"
+                    Foreground="White"
+                    IsEnabled="True" />
+                <Button
+                    x:Name="SwapButton"
+                    Width="60"
+                    Height="50"
+                    Margin="10,117,0,0"
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Top"
+                    Background="Tomato"
+                    Click="SwapButton_Click"
+                    Content="SWAP"
+                    FontSize="15"
+                    Foreground="White"
+                    IsEnabled="True" />
+                <Button
+                    x:Name="ReloadButton"
+                    Width="71"
+                    Height="50"
+                    Margin="10,60,0,0"
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Top"
+                    Background="PaleVioletRed"
+                    Click="ReloadButton_Click"
+                    Content="RETURN"
+                    FontSize="15"
+                    Foreground="White"
+                    IsEnabled="True" />
+                <Button
+                    x:Name="HintButton"
+                    Width="71"
+                    Height="50"
+                    Margin="10,60,0,0"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Top"
+                    Background="OrangeRed"
+                    Click="HintButton_Click"
+                    Content="HINT"
+                    FontSize="15"
+                    Foreground="White"
+                    IsEnabled="True" />
             </Grid>
         </Grid>
-        <Button Content="HELP" Name="HelpButton" Background="Wheat" HorizontalAlignment="Left" Margin="1009,519,0,0" VerticalAlignment="Top" Width="75" Click="HelpButton_Click"/>
+        <Button
+            Name="HelpButton"
+            Width="75"
+            Margin="1009,519,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Background="Wheat"
+            Click="HelpButton_Click"
+            Content="HELP" />
     </Grid>
 </Window>
